# WinConveyoR

./: .gitignore  301  CONTRIBUTING.md  Makefile  README.md  compile_windows.ps1  compile_wsl.sh
.github/workflows/: actions.yaml  ci.yml
.github/workflows/build_project/: action.yml
api/: .env  .env.example  main.py  requirements-dev.txt  requirements.txt
api/core/: config.py  rate_limiter.py
api/db/: repository.py  session.py
api/db/models/: user.py
api/schemas/: __init__.py  user.py
api/src/: __init__.py
api/src/v1/: __init__.py  deps.py
api/src/v1/endpoints/: users.py
api/tests/: test_users.py
assets/cli/graphic/patterns/: pattern_loading.xml
cli/: Makefile  main.py
cli/src/: __init__.py
cli/src/arghandler/: __init__.py
cli/src/cli/: cli.py
cli/src/graphic/: __init__.py  graphic.py  loading_bar.py
cli/src/graphic/builtin/: __init__.py  graphic_object.py  loading_bar.py
cli/src/graphic/pattern/: __init__.py  builder.py  compiler.py  exceptions.py  loader.py
cli/src/packaging/: __init__.py
cli/src/thread/: __init__.py  job.py  pool.py
cli/src/wrappers/: __init__.py  dllloader.py
cli/src/wrappers/libwconr/: __init__.py  _libwconr.py  libwconr.py
gui/: index.html  index.js  package.json  tailwind.config.js  vite.config.ts
gui/electron/: main.js  preload.js
gui/src/: App.tsx  index.css
gui/src/components/layout/: Header.tsx  Sidebar.tsx  TitleBar.tsx
gui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  ProgressBar.tsx
gui/src/context/: PackageContext.tsx  SettingsContext.tsx
gui/src/data/: mockData.ts
gui/src/pages/: DiscoverPage.tsx  HomePage.tsx  InstalledPage.tsx  SettingsPage.tsx  UpdatesPage.tsx
gui/src/types/: index.ts
include/: libwconr.h
lib/: Makefile
lib/libwconr/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  libwconr.h  libwconr.lib  libwconr.sln  libwconr_private.h  libwconr_private_source.h  wconr.vcxproj  wconr.vcxproj.filters
lib/libwconr/Release/: libwconr.exp  wconr.exp  wconr.lib
lib/libwconr/src/: download_package.c  http_headers.c  http_parsing.c  http_request.c  http_response.c  platform_types.h  test.c  wcr_state.c
lib/libwconr/src/modules/source/: source_handler.c
lib/libwconr/src/posix/: http.c
lib/libwconr/src/win/: http.c
lib/libwconr/wconr.dir/Debug/: objects.txt
lib/libwconr/wconr.dir/MinSizeRel/: objects.txt
lib/libwconr/wconr.dir/RelWithDebInfo/: objects.txt
lib/libwconr/wconr.dir/Release/: exports.def  libwconr.dll.recipe  objects.txt  wconr.dll.recipe
lib/libwconr/wconr.dir/Release/wconr.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lib/libwconr/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
lib/libwconr/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
lib/libwconr/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
lib/libwconr/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
tools/: header_to_py.py
tools/langpacks/python/: _base  _enum  _struct  _symbol  converter.xml
